# lidar

./: .gitignore  README.md
interface/src/sensing_msgs/: CMakeLists.txt  package.xml
interface/src/sensing_msgs/msg/: BallState.msg
lidarDetection/: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  README.md
lidarDetection/scripts/: build.sh  datector.sh  fastlio.sh  kill.sh  livox_driver.sh  mdetector.sh  re.sh  sort.sh
lidarDetection/src/fastlio/: CMakeLists.txt
lidarDetection/src/fastlio/config/: mid360.yaml
lidarDetection/src/fastlio/rviz/: fastlio.rviz
lidarDetection/src/fastlio/src/: laserMapping.cpp  preprocess.h
lidarDetection/src/lidarDetection/: CMakeLists.txt  package.xml
lidarDetection/src/lidarDetection/config/: go2.yaml
lidarDetection/src/lidarDetection/include/lidar_detection/: Marker_visual.hpp  box.hpp  obstacle_detector.hpp  ukf.hpp  utils.hpp
lidarDetection/src/lidarDetection/launch/: go2.launch.py
lidarDetection/src/lidarDetection/msg/: BallRelative.msg  ObstacleDetection.msg  ObstacleDetectionArray.msg
lidarDetection/src/lidarDetection/rviz/: detection.rviz
lidarDetection/src/lidarDetection/scripts/: reconfigure.py
lidarDetection/src/lidarDetection/src/: interface.cpp  obstacle_detector.cpp  obstacle_to_baselink_transformer.cpp  odom_to_baselink_transformer.cpp  utils.cpp
lidarDetection/src/lidarSORT/: CMakeLists.txt  package.xml  requirements.txt
lidarDetection/src/lidarSORT/launch/: human.launch.py  human_detection.launch
lidarDetection/src/lidarSORT/msg/: HumanDetection.msg  HumanDetectionArray.msg
lidarDetection/src/lidarSORT/rviz/: default.rviz  human_detection.rviz
lidarDetection/src/lidarSORT/src/: filter.py  main.py  sort.py
lidarDetection/src/lidarSORT/src/config/: __init__.py  param.py
lidarDetection/src/lidarSORT/src/utils/: misc.py  viz.py
lidarDetection/src/livox_ros_driver2/config/: MID360_config.json
lidarDetection/src/livox_ros_driver2/launch_ROS1/: msg_MID360.launch
lidarDetection/src/livox_ros_driver2/launch_ROS2/: msg_MID360_launch.py
lidarDetection/src/m_detector/: CMakeLists.txt  package.xml
lidarDetection/src/m_detector/config/mid360/: mid360.yaml
lidarDetection/src/m_detector/include/cluster_predict/: dbscan.h  voxel_cluster.h
lidarDetection/src/m_detector/include/m_detector/: DynObjCluster.h  DynObjFilter.h
lidarDetection/src/m_detector/launch/: detector_mid360.launch.py
lidarDetection/src/m_detector/rviz/: m_detector.rviz
lidarDetection/src/m_detector/src/: DynObjCluster.cpp  DynObjFilter.cpp  cal_recall_multi.cpp  display_prediction.cpp  dynfilter_with_odom.cpp
